# Cheetah_Firmware

./: .gitignore  CMakeLists.txt  README.md  REPLACE esp_eth_mac_w5500.c.txt  TODO.txt  partition_table.csv  pc_to_line.txt  phalos.jsn  platformio.ini  post_build.py  pre_build.py  sdkconfig  sdkconfig.16seg_hybrid  sdkconfig.16segled  sdkconfig.16segrgb  sdkconfig.aeg_splitflap  sdkconfig.annax_led  sdkconfig.car_lcd  sdkconfig.esp-wrover-kit  sdkconfig.esp-wrover-kit.old  sdkconfig.krone_splitflap  sdkconfig.krone_splitflap_large  sdkconfig.krone_splitflap_small  sdkconfig.lawo_aluma  sdkconfig.oilflip  sdkconfig.saf_lcd  sdkconfig.saflap  sdkconfig.splitflap_k8200_pst  sdkconfig.splitflap_k9000  test.jsn
aux_scripts/: bitmap_generator_test.py  bitmap_generators_dll.c  build_dll.bat  char_16seg_mapping.h  char_countdown.py  cheetah_api.py
aux_scripts/lcd_saf_mosaic_20/: font_gen.html  font_gen.js
boards/: xatlabs-cheetah.json
components/Browser_OTA/: CMakeLists.txt  Kconfig  browser_ota.c
components/Browser_OTA/WebsiteFiles/: index.html
components/Browser_OTA/include/: browser_ota.h
components/browser_config/: CMakeLists.txt  browser_config.c
components/browser_ota/: CMakeLists.txt  browser_ota.c
components/browser_spiffs/: CMakeLists.txt  browser_spiffs.c
components/driver_display_char_16seg_led_spi/: CMakeLists.txt  Kconfig  char_16seg_font.h  char_16seg_led_spi.c  char_16seg_led_spi.h
components/driver_display_char_16seg_led_ws281x/: CMakeLists.txt  Kconfig  char_16seg_led_ws281x.c  char_16seg_led_ws281x.h  char_16seg_led_ws281x_old.c  led_strip_rmt_ws2812.c
components/driver_display_char_16seg_led_ws281x_hybrid/: CMakeLists.txt  Kconfig  char_16seg_font.h  char_16seg_led_ws281x_hybrid.c  char_16seg_led_ws281x_hybrid.h  char_16seg_mapping.h
components/driver_display_char_ibis/: CMakeLists.txt  Kconfig  char_ibis.c  char_ibis.h
components/driver_display_char_krone_9000/: CMakeLists.txt  (+3 more)
components/input_browser_canvas/: CMakeLists.txt  browser_canvas.c
components/input_browser_canvas/include/: browser_canvas.h
components/input_browser_canvas/static/: browser_canvas.html
components/input_browser_canvas/static/css/: simple.css
components/input_browser_canvas/static/js/: util.js
components/util/: CMakeLists.txt  gpio.c  gpio.h  util_brightness.c  util_buffer.c  util_disp_selection.c  util_fan.c  util_fixed_point.c  util_generic.c  util_gpio.c  util_heartbeat.c  util_httpd.c  util_nvs.c
components/util/include/: util.h  util_brightness.h  util_buffer.h  util_disp_selection.h  util_fan.h  util_fixed_point.h  util_generic.h  util_gpio.h  util_heartbeat.h  util_httpd.h  util_nvs.h
docs/: Buffer Overview.odg  buffer_overview.odg
include/: config_global.h  ethernet.h  fixed_point.h  httpd.h  macros.h  ntp.h  wg.h  wifi.h
src/: CMakeLists.txt  Kconfig  ethernet.c  httpd.c  idf_component.yml  main.c  ntp.c  wg.c  wifi.c  wifi.h
(+119 files in other folders)
